@@ -215,26 +215,10 @@
         <legend><span i18n:translate="label_schema_pm_search"></span></legend>
         <table width="100%">
           <tr valign="top">
-            <td tal:define="field python:here.getField('maxSearchResults')">
+            <td tal:define="field python:here.getField('maxShownFound')">
               <span metal:use-macro="here/widgets/field/macros/view" />
             </td>
-            <td tal:define="field python:here.getField('maxShownFoundItems')">
-              <span metal:use-macro="here/widgets/field/macros/view" />
-            </td>
-          </tr>
-          <tr valign="top">
-            <td tal:define="field python:here.getField('maxShownFoundMeetings')">
-              <span metal:use-macro="here/widgets/field/macros/view" />
-            </td>
-            <td tal:define="field python:here.getField('maxShownFoundAnnexes')">
-              <span metal:use-macro="here/widgets/field/macros/view" />
-            </td>
-          </tr>
-          <tr valign="top">
             <td tal:define="field python:here.getField('showItemKeywordsTargets')">
-              <span metal:use-macro="here/widgets/field/macros/view" />
-            </td>
-            <td tal:define="field python:here.getField('searchItemStates')">
               <span metal:use-macro="here/widgets/field/macros/view" />
             </td>
           </tr>
